--- a/deploymentservice.yml
+++ b/deploymentservice.yml
@@ -1,19 +1,19 @@
 apiVersion: apps/v1
-kind: Deployment # Kubernetes resource kind we are creating
+kind: Deployment # Kubernetes resource kind we are creating##
 metadata:
   name: ekart-deployment
 spec:
   selector:
     matchLabels:
-      app: ekart
+      app: ekart-shoping
   replicas: 2 # Number of replicas that will be created for this deployment
   template:
     metadata:
       labels:
-        app: ekart
+        app: ekart-shoping
     spec:
       containers:
-        - name: ekart
+        - name: ekart-shoping
           image: techdatainfinity/ekart-shoping:latest # Image that will be used to containers in the cluster
           imagePullPolicy: IfNotPresent
           ports:
@@ -25,10 +25,10 @@ spec:
 apiVersion: v1 # Kubernetes API version
 kind: Service # Kubernetes resource kind we are creating
 metadata: # Metadata of the resource kind we are creating
-  name: ekart-ssvc
+  name: ekart-shoping-ssvc
 spec:
   selector:
-    app: ekart
+    app: ekart-shoping
   ports:
     - protocol: "TCP"
       port: 8070 # The port that the service is running on in the cluster
