--- a/pom.xml
+++ b/pom.xml
@@ -157,7 +157,7 @@
     <snapshotRepository>
       <id>maven-snapshots</id>
       <name>maven-snapshots</name>
-      <url>http://65.2.128.122:8081/repository/maven-snapshots/</url>
+      <url>https://65.2.128.122:8081/repository/maven-snapshots/</url>
     </snapshotRepository>
 </distributionManagement>
 
